--- a/myfinance-web-netcore/src/Views/Transacao/Index.cshtml
+++ b/myfinance-web-netcore/src/Views/Transacao/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Listagem de Transações";  @** nesse caso o cód C# está manipulando o titulo da view *@
+    ViewData["Title"] = "Listagem de Transações";
 }
 
 
@@ -47,6 +47,3 @@
         window.location.href = "../Transacao/Excluir/" +id;
     }
 </script>
-
-@*! CSHTML = possibilita escrever cód C# (back-end) junto com html (Front-end), todo cód C# que for adicionado deve estar dentor de @{} *@
-@*@ Os scripts alteram o caminho da pag para a opção selecionada *@
