--- a/myfinance-web-netcore/src/Views/Home/Index.cshtml
+++ b/myfinance-web-netcore/src/Views/Home/Index.cshtml
@@ -1,10 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";  @** nesse caso o cód C# está manipulando o titulo da view *@
+    ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Bem vindo</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
-
-@*! CSHTML = possibilita escrever cód C# (back-end) junto com html (Front-end), todo cód C# que for adicionado deve estar dentor de @{} *@
